--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
+body {
   background-color: #333;
   display: flex;
   justify-content: center;
@@ -13,11 +15,7 @@ body{
   font-size: 7vmin;
 }
 
-#game-board{
-  --grid-size: 4;
-  --cell-size: 20vmin;
-  --cell-gap: 2vmin;
-  --cell-radius: 1vmin;
+#game-board {
   display: grid;
   grid-template-columns: repeat(var(--grid-size), var(--cell-size));
   grid-template-rows: repeat(var(--grid-size), var(--cell-size));
@@ -26,17 +24,16 @@ body{
   border-radius: var(--cell-radius);
   padding: var(--cell-gap);
   position: relative;
-
 }
 
-.cell{
+.cell {
   background-color: #aaa;
   border-radius: var(--cell-radius);
 }
 
-.tile{
-  --x-tile: 0;   
-  --y-tile: 0;
+.tile {
+  --x-tile: 2;
+  --y-tile: 2;
   --tile-brightness: 80%;
   --text-brightness: 20%;
   position: absolute;
@@ -56,7 +53,7 @@ body{
 }
 
 @keyframes phase {
-  0%{
+  0% {
     opacity: 0;
     transform: scale(0.5);
   }
